INTWEB-499 put max width on competition level select to prevent stretching

--- a/app/admin/platform/associations/association.less
+++ b/app/admin/platform/associations/association.less
@@ -86,6 +86,14 @@
         .new-conference-name {
             width: 30%;
         }
+
+        .new-conference-comp-level {
+            max-width: 20%;
+
+            select {
+                padding-right: 30px;
+            }
+        }
     }
 
     .add-competition-level-container {
